# array

./: CMakeLists.txt  head.c  main.c
function_array/: CMakeLists.txt  bubble_sort.c  function.h  generation.c  max_min.c  print_array.c  quick_sort.c  selection_sort.c  sort.c
two/: CMakeLists.txt  create_twodim_array.c  two-dim_array.h
